/***********************************************************************
X3 ChangeLog

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_kill function.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: improve error logic for pyobj_from_usernode.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: improve error logic for emb_get_servers.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: improve error logic for emb_get_channels.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: improve error logic for emb_get_users.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_get_server function and require P10.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_get_servers function.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: fix a bunch of typos

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_get_channels function.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_get_users function.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: raise exception on failure in emb_get_account.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: raise exception on unknown channel in emb_get_channel

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: make emb_send_target_notice more resilient toward
	erroneous input and raise exceptions on failures.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: make emb_send_target_privmsg more resilient toward
	erroneous input and raise exceptions on failures.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: make emb_dump raise exception on failure.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: set exception on error path in emb_get_user.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>
